<resources>
    <string name="app_name">Vibsey</string>
    <string name="my_profile">My Profile</string>
    <string name="chat_list">Chat List</string>
    <string name="find_friends">Find Friends</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="chatapp">ChatApp</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="username">Username</string>
    <string name="todo123">TODO</string>
    <string name="getStarted">Get Started</string>
    <string name="getStartedDescription">Vibsey lets you to get in contact with your closed ones. Message contacts, start free video or voice calls, and hop on a conversation with one person or a group.</string>
</resources>
